refactor : 删除了一些无用的代码，工整了其余代码